--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section>
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select aria-label="Filter by neighborhood" role="tablist" 3" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select aria-label="Filter by neighborhood" role="tablist" tabindex="3" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
         <select aria-label="Filter by cuisine" role="tablist" tabindex="4" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
