--- a/restaurant.html
+++ b/restaurant.html
@@ -40,18 +40,18 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <div tabindex="3" id="restaurant-cuisine"></div>
+      <div tabindex="3" id="restaurant-cuisine" aria-label="Restaurant type of cuisine"></div>
       <div id="restaurant-details">
-        <h1 tabindex="4" id="restaurant-name"></h1>
-        <div tabindex="5" id="restaurant-address"></div>
-        <img id="restaurant-img">
+        <h1 tabindex="4" id="restaurant-name" aria-label="Restaurant name"></h1>
+        <div tabindex="5" id="restaurant-address" aria-label="Restaurant address"></div>
+        <img id="restaurant-img" alt="restaurant-name" role="img" aria-label="Image of Restaurant">
       </div>
-      <table tabindex="6" id="restaurant-hours"></table>
+      <table tabindex="6" id="restaurant-hours" aria-label="Restaurant hours" ></table>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
     <section id="reviews-container">
-      <ul tabindex="7" id="reviews-list"></ul>
+      <ul tabindex="7" id="reviews-list" aria-label="Reviews"></ul>
     </section>
     <!-- End reviews -->
   </main>
