Added alt attribute + fixed server worker

--- a/restaurant.html
+++ b/restaurant.html
@@ -44,7 +44,7 @@
       <div id="restaurant-details">
         <h1 tabindex="4" id="restaurant-name" aria-label="Restaurant name"></h1>
         <div tabindex="5" id="restaurant-address" aria-label="Restaurant address"></div>
-        <img id="restaurant-img" alt="restaurant-name" role="img" aria-label="Image of Restaurant">
+        <img id="restaurant-img" alt="" role="img" aria-label="Image of Restaurant">
       </div>
       <table tabindex="6" id="restaurant-hours" aria-label="Restaurant hours" ></table>
     </section>
